1998-07-06  John R. Jackson  <jrj@purdue.edu>

	* client-src/sendsize.c (handle_dumpline): allow the dump block
	count estimate to be negative.  Found by Lance A. Brown
	<brown9@niehs.nih.gov> on NeXT.

1998-07-04  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcheck.c (start_server_check): report space use for
	holding disk if a negative value is given in the use parameter.

	* server-src/driver.c (main): compute holding disk space if 
	a negative value is given in the use parameter..

	* man/amanda.8.in (use) : document negative use paramater for 
	holding disk.

	* example/amanda.conf.in (use): document negative use paramater for
	holding disk..

1998-07-04  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* man/amanda.8.in (reserve): document it
	* example/amanda.conf.in (reserve, gigabytes): ditto
	(etimeout) negative number stands for total estimate time

	* NEWS: documented major changes since amanda 2.3.0.4

	* docs/INSTALL: refer to patch-system for editing services and
 	inetd.conf

	* docs/FAQ: added entries for common amdump and amcheck errors

	* COPYRIGHT: updated to 1998, refer to Amanda Development Team
	* AUTHORS: who is the Amanda Development Team

1998-07-03  John R. Jackson  <jrj@purdue.edu>

	* docs/SYSTEM.NOTES: add comment about using the variable device name
	on IRIX.  Otherwise, IRIX will write 4KByte physical blocks, which
	it appears to read OK, but not if you take the tape to some other
	system that does what you tell it.  Discovered by Steve E. Khoo
	(steve@gordian.com).

1998-07-02  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/planner.c (setup_estimate): handle new disks with
	skip-full correctly.

	* Makefile.am (aclocal.m4): must depend on libtool.m4, so as to
 	force it to be newer on distributions.

1998-07-01  John R. Jackson  <jrj@purdue.edu>

	* server-src/driverio.h: change reserved_space to unsigned long to
	match free_space() and avoid a compiler warning.

1998-06-30  John R. Jackson  <jrj@purdue.edu>
